update all benchmarks to pass VM flags using @Fork